<resources>
    <string name="app_name">ProfNotes</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_login">Login</string>
    <string name="login">Вход</string>
    <string name="appeal_login">Пожалуйста, войдите для продолжения</string>
    <string name="hint_login">Номер телефона или логин</string>
    <string name="hint_password">Пароль</string>
    <string name="registration_appeal">Или войдите без аккаунта, если не хотите пользоваться всеми возможностями</string>
    <string name="enter">Войти</string>
    <string name="forgot_password">Не помните свой пароль? Восстановите пароль</string>
    <string name="morning_greetings">Доброе утро,\n%1$s</string>
    <string name="evening_greetings">Добрый вечер,\n%1$s</string>
    <string name="night_greetings">Доброй ночи,\n%1$s</string>
    <string name="day_greetings">Добрый день,\n%1$s</string>
    <string name="today">Сегодня</string>
    <string name="news">Новости</string>
    <string name="new_notes">Новые заметки</string>
    <string name="my_tasks">Мои задачи</string>
    <string name="all_tasks">Все задачи</string>
    <string name="find_in_notes">Поиск по заметкам</string>
    <string name="new_note">Новое</string>
    <string name="in_progress_note">В работе</string>
    <string name="completed_note">Завершено</string>
    <string name="delayed_note">Отложено</string>
    <string name="change_status">Сменить статус</string>
    <string name="monday_short">пн</string>
    <string name="tuesday_short">вт</string>
    <string name="wednesday_short">ср</string>
    <string name="thursday_short">чт</string>
    <string name="friday_short">пт</string>
    <string name="saturday_short">сб</string>
    <string name="sunday_short">вс</string>
    <string name="every_day">ежедневно</string>
    <string name="until_today">До</string>
    <string name="enable_notifications">Включить уведомления</string>
    <string name="send_feedback">Обратная связь</string>
    <string name="preferences_report">Сообщите о технических проблемах или предложите новые функции</string>
    <string name="sign_in_without_autorization">войдите без аккаунта</string>
    <string name="forget_recovery">Восстановите пароль</string>
</resources>