<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.fragments.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingTop="12dp"
        tools:context=".presentation.fragments.home.HomeFragment">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivProfilePicture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/Circular"
            tools:src="@drawable/ic_preferences" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvProfileGreetings"
            style="@style/TextH2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@+id/ivProfilePicture"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/morning_greetings" />

        <ImageButton
            android:id="@+id/ibtnRemind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_bell"
            app:layout_constraintBottom_toBottomOf="@+id/ivProfilePicture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivProfilePicture" />

        <TextView
            android:id="@+id/tvToday"
            style="@style/TextH2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/today"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivProfilePicture" />

        <TextView
            android:id="@+id/tvNews"
            style="@style/TextH2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvToday"
            app:layout_constraintTop_toTopOf="@+id/tvToday" />

        <TextView
            android:id="@+id/tvTodayDescription"
            style="@style/TextH3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvToday"
            tools:text="Понедельник, 11 июля" />

        <TextView
            android:id="@+id/tvNewsDescription"
            style="@style/TextH3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/tvNews"
            app:layout_constraintTop_toBottomOf="@+id/tvToday"
            tools:text="4 новые заметки" />

        <EditText
            android:id="@+id/etSearch"
            style="@style/ProfEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_find"
            android:drawablePadding="8dp"
            android:hint="@string/find_in_notes"
            android:padding="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTodayDescription" />

        <LinearLayout
            android:id="@+id/groupTasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSearch">

            <LinearLayout
                android:id="@+id/groupGeneralTasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/groupGeneralTasksInner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvGeneralTasks"
                        style="@style/TextH1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_notes"
                        android:textAllCaps="true" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvGeneralTasksCount"
                        style="@style/TextH1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/green"
                        tools:text="1" />
                </LinearLayout>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vpGeneralTasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/groupLocalTasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvLocalTasks"
                    style="@style/TextH1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_tasks"
                    android:textAllCaps="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvLocalTasksCount"
                    style="@style/TextH1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/green"
                    app:layout_constraintBottom_toBottomOf="@+id/tvLocalTasks"
                    app:layout_constraintStart_toEndOf="@id/tvLocalTasks"
                    app:layout_constraintTop_toTopOf="@+id/tvLocalTasks"
                    tools:text="1" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvAllTasks"
                    style="@style/TextH4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="@string/all_tasks"
                    android:textColor="@color/gray"
                    app:layout_constraintBottom_toBottomOf="@+id/tvLocalTasks"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvLocalTasks" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvLocalTasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvLocalTasks"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_note" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
